<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">File Manager</string>
    <string name="sort_by">Sort by</string>
    <string name="copy">Copy</string>
    <string name="create_folder">Create folder</string>
    <string name="cut">Cut</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="paste">Paste</string>
    <string name="rename">Rename</string>
    <string name="new_folder">New folder</string>
    <string name="confirm_rename">Confirm Rename</string>
    <string name="add_ringtone">Set as phone ringtone</string>
    <string name="add_notification_sound">Set as notification sound</string>
    <string name="add_alarm_sound">Set as alarm sound</string>
    <string name="cancel_ringtone">Remove from phone ringtone</string>
    <string name="cancel_notification_sound">Remove from notification sound</string>
    <string name="cancel_alarm_sound">Remove from alarm sound</string>
    <string name="add_ringtone_toast">\"%s\" add as phone ringtone.</string>
    <string name="add_notification_sound_toast">\"%s\" add as notification sound.</string>
    <string name="add_alarm_sound_toast">\"%s\" add as alarm sound.</string>
    <string name="cancel_ringtone_toast">\"%s\" remove from phone ringtone.</string>
    <string name="cancel_notification_sound_toast">\"%s\" remove from notification sound.</string>
    <string name="cancel_alarm_sound_toast">\"%s\" remove from alarm sound.</string>
    <string name="add_nonsucess_ringtone_toast">\"%s\" not successfully added as a ringtone.</string>
    <string name="add_nonsucess_notification_sound_toast">\"%s\" not successfully added as a notification sound.</string>
    <string name="add_nonsucess_alarm_sound_toast">\"%s\" not successfully added as a alarm sound.</string>
    <string name="pasting">Pasting</string>
    <string name="loading">Loading…</string>
    <string name="deleting">Deleting</string>
    <string name="alert_delete_multiple">These items will be deleted.</string>
    <string name="alert_delete_single">This item will be deleted.</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="modified_time">Modified</string>
    <string name="readable">Readable</string>
    <string name="executable">Executable</string>
    <string name="writable">Writable</string>
    <string name="msg_rename_ext">You are changing the file extension, which may cause the file not to be recognized. Are you sure to do this?</string>
    <string name="wait">Please wait…</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="deselect_all">Deselect All</string>
    <string name="select_all">Select All</string>
    <string name="share">Share</string>
    <string name="sort">Sort</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="show_file">Show hidden files</string>
    <string name="hide_file">Hide hidden files</string>
    <string name="selected">selected</string>
    <string name="send_file">Send file</string>
    <string name="empty_msg">(Empty Folder)</string>
    <string name="default_search_text">Search Files</string>
    <string name="free_space">Available</string>
    <string name="total_space">Total space</string>
    <string name="search_files">Search Files</string>
    <string name="swaped_storage_room_info">%1$s %2$s %3$.2f %4$s%5$s%6$s%7$s %8$.2f %9$s</string>
    <string name="copy_deny">No permission to copy.</string>
    <string name="cut_deny">No permission to cut.</string>
    <string name="delete_deny">No permission to delete.</string>
    <string name="insufficient_memory">Insufficient space.</string>
    <string name="invalid_empty_name">File or folder name cannot be empty.</string>
    <string name="paste_same_folder">Cannot paste to the same directory.</string>
    <string name="invalid_char_prompt">You have input invalid character(s).</string>
    <string name="msg_unable_open_file">The file format is not supported.</string>
    <string name="search_text_empty">Search contents should not be empty.</string>
    <string name="paste_sub_folder">Cannot paste to subfolder.</string>
    <string name="operation_fail">Some file operation failed.</string>
    <string name="search_result">%2$d result(s) for \"%1$s\"</string>
    <string name="already_exists">%1$s is already in use.</string>
    <string name="path_not_exists">%1$s is not exist.</string>
    <string name="unmounted">%1$s is unmounted.</string>
    <string name="create_hidden_file">File will be hidden if its name starts with \'.\'.</string>
    <string name="modify_hidden_file">File will not be hidden if its name does not starts with \'.\'.</string>
    <string name="file_name_too_long">The input name is too long.</string>
    <string name="paste_fail">Paste failed.</string>
    <string name="delete_fail">Delete failed.</string>
    <string name="some_paste_fail">Some paste operations failed.</string>
    <string name="some_delete_fail">Some delete operations failed.</string>
    <string name="search_empty">Search content should not be empty.</string>
    <string name="search_setting_description">Local files and folders</string>
    <string name="change_mode">Select file or folder</string>
    <string name="folder_beam_forbidden_title">Can\'t beam folder</string>
    <string name="folder_beam_forbidden_message">Folder beam is not supported.Please select multiple files to beam.</string>
    <string name="drm_beam_forbidden_title">Beam forbidden</string>
    <string name="drm_beam_forbidden_message">DRM(Digital Right Management) protected files can not be beamed.</string>
    <string name="hotknot">HotKnot</string>
</resources>
