<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/actionbar_fm_create_folder" android:id="@+id/create_folder" android:title="@string/create_folder" android:showAsAction="always"/>
    <item android:icon="@drawable/actionbar_fm_paste" android:id="@+id/paste" android:title="@string/paste" android:showAsAction="always"/>
    <item android:icon="@drawable/actionbar_fm_search" android:id="@+id/search" android:title="@string/search" android:showAsAction="always"/>
    <item android:id="@+id/change_mode" android:title="@string/change_mode" android:showAsAction="never"/>
    <item android:id="@+id/hide" android:showAsAction="never"/>
    <item android:id="@+id/sort" android:title="@string/sort" android:showAsAction="never"/>
</menu>
